--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "docpad-plugin-eco": "2.x",
     "docpad-plugin-marked": "2.x",
     "docpad-plugin-partials": "2.x",
-    "docpad-plugin-stylus": "2.x",
+    "docpad-plugin-stylus": "~2.3.0",
     "docpad-plugin-text": "2.x",
     "docpad-plugin-ghpages": "~2.0.2",
     "docpad-plugin-jade": "~2.3.1"
